2016-12-11 v0.2610 pjacklam

 * Fix Makefile.PL so that this module installs over the core version.

2016-12-03 v0.2609 pjacklam

 * Use ExtUtils::MakeMaker rather than Module::Install in Makefile.PL

 * Remove INSTALL file. The information is in the README file.

 * Inform in the BUGS file that the file may not be up to date.

 * Inform in the TODO file that the file may not be up to date.

 * Update AUTHOR information in Math/BigRat.pm.

 * Remove author information in LICENSE file.

 * Update README file.

 * Minor POD reformatting in lib/Math/BigRat.pm.

2016-11-15 v0.260805 pjacklam

 * Standardize on using $LIB for the variable holding the class of the backend
   library.

 * Improve bmul() by doing _gcd() twice on smaller numbers rather than once on
   larger numbers.

2016-04-25 v0.260804 pjacklam

 * Revert the change to the blsft() and brsft() methods, which truncated the
   input (and output) to integers. However, now convert the base to an object
   only when the base isn't an object already. Also return NaN if any of the
   three operands is a NaN.

 * Overloaded 'int' should not modify it's argument.

 * The first output argument from objectify() is the class name, so use the
   variable name $class, not $self.

 * In Makefile.PL, change "build_requires 'Test::More' => 0.47" to
   "test_requires 'Test::More' => 0.47". Test::More is only needed for testing,
   not for building.

2016-04-22 v0.260803 pjacklam

 * Add methods bnan(), binf(), bzero(), and bone(). The old code was based on
   an undocumented behaviour where the superclass made assumptions about the
   subclass.

 * Fix tests where ok() was used incorrectly, like ok($got, $expected).

 * Remove "require Carp", since we have "use Carp" in the heading.

 * Completly rewrite new(). It was buggy and hard to maintain.

 * Add more descriptions to tests.

 * Rename blog-mbr.t to author-blog-mbr.t.

 * Simplify bsqrt() and blog(). Don't assume we know the internals of
   Math::BigFloat objects.
