@@ -39,6 +39,6 @@
       }
    },
    "release_status" : "stable",
-   "version" : "0.2610",
+   "version" : "0.2611",
    "x_serialization_backend" : "JSON::PP version 2.27400"
 }
