@@ -21,5 +21,5 @@ requires:
   Math::BigInt: '1.999718'
   Test::More: '0.82'
   perl: '5.006'
-version: '0.2610'
+version: '0.2611'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
